--- a/login/editarUsers/admin.html
+++ b/login/editarUsers/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrar Usuarios</title>
-    <link rel="stylesheet" type="text/css" href="admin_styles.css">
+    <link rel="stylesheet" type="text/css" href="/editarUsers/admin_styles.css">
 </head>
 <body>
     <div class="fondo">
@@ -25,6 +25,6 @@
             </table>
         </div>
     </div>
-    <script src="admin_script.js"></script>
+    <script src="/editarUsers/admin_script.js"></script>
 </body>
 </html>
